--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,7 @@ spring:
     username: root
     password: 123456
     url: jdbc:mysql://localhost:3306/laydb?serverTimezone=GMT%2B8
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
   thymeleaf:
     cache: false
@@ -21,8 +22,8 @@ spring:
     date-format: yyyy-MM-dd
     time-zone: GMT+8
 mybatis:
-  mapper-locations: classpath:mybatis/mapper/*.xml
-  type-aliases-package: cn.qqcn.*.entity
+  mapper-locations: classpath:mapper/*.xml
+  type-aliases-package: com.moonykun.demo.domain
   configuration:
     map-underscore-to-camel-case: true  # 驼峰转换
 
