--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,9 @@ spring:
     time-zone: GMT+8
 
   jpa:
-    show-sql: true
+    hibernate:
+      ddl-auto: update #自动更新
+    show-sql: true  #日志中显示sql语句
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
